[Fix] Rating Field Not Showing for other Contestant

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,8 +50,8 @@ header {
     a {
       display: flex;
       img {
-        width: 55px;
-        height: auto;
+        width: 50px;
+        height: 50px;
       }
     }
   }
